# Crypto-Data-Downloader

./: .gitignore  download_all_spot.py  download_binance.py  pixi.toml  pyproject.toml
configs/: costs.yaml  universes.yaml
reports/: handoff_prompt.md  strategy_report.md
reports/tables/: _test_comparison.csv  _test_comparison.json  breakout_sensitivity_top20.csv  breakout_sensitivity_top50.csv  breakout_yearly_top20.csv  breakout_yearly_top50.csv  btc_trend_cost_sensitivity.csv  btc_trend_parameter_sensitivity.csv  btc_trend_walkforward_by_year.csv  chandelier_sensitivity.csv  chandelier_yearly.csv  data_quality_report.json  portfolio_equity_curves.csv  result_buy_and_hold_btc_btc_eth_base.json  result_cross_sectional_momentum_gated_broad_liquid_W.json  result_cross_sectional_momentum_gated_ivol_top10_W.json  result_cross_sectional_momentum_gated_ivol_top20_W.json  result_cross_sectional_momentum_gated_top10_base.json  result_cross_sectional_momentum_gated_top20_W.json  result_cross_sectional_momentum_gated_top50_W.json  result_cross_sectional_momentum_skipweek_broad_liquid_MS.json  result_cross_sectional_momentum_skipweek_gated_broad_liquid_MS.json  result_cross_sectional_momentum_skipweek_gated_top50_MS.json  result_cross_sectional_momentum_skipweek_top20_MS.json  result_cross_sectional_momentum_skipweek_top50_MS.json  result_cross_sectional_momentum_top20_base.json  result_cross_sectional_momentum_top50_MS.json  result_donchian_breakout_fixed_top20_D_base.json  result_donchian_breakout_top20_D.json  result_intraday_1h_top20_z-2.0.json  (+20 more)
(+22 files in other folders)
