[project]
name = "binance-pp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.5.4",
    "httpx==0.28.1",
    "matplotlib==3.11.0",
    "numpy>=1.22,<2.5",
    "pandas==3.0.3",
    "polars==1.42.1",
    "pyarrow==24.0.0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "rich==15.0.0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "statsmodels==0.14.6",
    "tqdm==4.68.4",
    "vectorbt==0.28.0",
    "backtesting==0.6.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_research"]
